<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bck"
    tools:context=".ui.home.VigenereFragment">

    <ImageView
        android:layout_marginStart="-5dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back2"/>

    <TextView
        android:id="@+id/vignere_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:text="@string/title_vignere"
        android:textColor="#000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/bck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vignere_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="#fff"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/ll_plain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/plain"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/in_plain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/plain"
                            android:textColorHint="#000"
                            android:inputType="text"
                            android:textColor="#000" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_key"
                    android:layout_below="@id/ll_plain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/key"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/in_key"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Key"
                            android:inputType="text"
                            android:textColorHint="#000"
                            android:textColor="#000" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_output"
                    android:layout_below="@id/ll_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/output"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:text="@string/out"
                        android:fontFamily="@font/poppins_bold"
                        android:textAlignment="textStart"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/enDec"
                        android:background="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:textColor="#000"
                        android:textAllCaps="true"
                        android:textSize="20sp" />
                </LinearLayout>

                <Switch
                    android:id="@+id/sw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_output"
                    android:text="Encrypt"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="15dp"/>

                <Button
                    android:id="@+id/btn_run"
                    style="@style/menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sw"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/bck_btn"
                    android:text="@string/run"/>

                <Button
                    android:id="@+id/btn_reset"
                    style="@style/menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_run"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bck_btn"
                    android:text="@string/reset"/>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>